// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Mapper for status FINISHED_WINNER and winner declared should return formatted data for status in FINISHED_WINNER 1`] = `
Object {
  "alert": Object {
    "description": "We recommend that you publish the winning variant.",
    "symbol": "check-circle",
    "title": "Variant 01 has outperformed control by at least 1%.",
  },
  "header": Object {
    "Description": [Function],
    "title": "Winner Declared",
  },
  "sections": Array [
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
  ],
  "status": "finished_winner",
  "summary": Object {
    "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit.",
    "subtitle": "Description",
    "title": "Summary",
  },
}
`;

exports[`Summary Mapper for status in COMPLETED and a variant published should return formatted data 1`] = `
Object {
  "alert": Object {
    "description": "Your new experience was successfully published and no more data will be collected for this test.",
    "symbol": "check-circle",
    "title": "Variant 01 has been published.",
  },
  "header": Object {
    "Description": [Function],
    "title": "Test Complete",
  },
  "sections": Array [
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
  ],
  "status": "completed",
  "summary": Object {
    "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit.",
    "subtitle": "Description",
    "title": "Summary",
  },
}
`;

exports[`Summary Mapper for status in COMPLETED should return formatted data 1`] = `
Object {
  "alert": Object {
    "description": "No more data will be collected for this test.",
    "symbol": "check-circle",
    "title": "Control has been kept as the experience.",
  },
  "header": Object {
    "Description": [Function],
    "title": "Test Complete",
  },
  "sections": Array [
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
  ],
  "status": "completed",
  "summary": Object {
    "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit.",
    "subtitle": "Description",
    "title": "Summary",
  },
}
`;

exports[`Summary Mapper for status in COMPLETED should return formatted data and complete a variant 1`] = `
Object {
  "alert": Object {
    "description": "Your new experience was successfully published and no more data will be collected for this test.",
    "symbol": "check-circle",
    "title": "Variant 01 has been published.",
  },
  "header": Object {
    "Description": [Function],
    "title": "Test Complete",
  },
  "sections": Array [
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
  ],
  "status": "completed",
  "summary": Object {
    "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit.",
    "subtitle": "Description",
    "title": "Summary",
  },
}
`;

exports[`Summary Mapper for status in DRAFT should display empty state 1`] = `
Object {
  "header": Object {
    "Description": [Function],
    "title": "Test Is in Draft Mode",
  },
  "setup": Object {
    "current": 3,
    "steps": Array [
      Object {
        "Description": [Function],
        "buttonProps": Object {
          "symbol": "dxp-logo",
        },
        "title": "Test Target",
      },
      Object {
        "Description": [Function],
        "buttonProps": Object {
          "symbol": "dxp-logo",
        },
        "title": "Test Metric",
      },
      Object {
        "Description": [Function],
        "buttonProps": Object {
          "symbol": "dxp-logo",
        },
        "title": "Variants",
      },
      Object {
        "Description": [Function],
        "buttonProps": Object {
          "data-tooltip": true,
          "disabled": true,
          "title": "Select the target element on Liferay DXP to run the test.",
        },
        "modal": Object {
          "Component": [Function],
          "props": Object {
            "dxpVariants": Array [
              Object {
                "changes": 0,
                "control": true,
                "dxpVariantId": "DEFAULT",
                "dxpVariantName": "Control",
                "trafficSplit": 50,
                "uniqueVisitors": 1,
              },
              Object {
                "changes": 0,
                "control": false,
                "dxpVariantId": "4203992243",
                "dxpVariantName": "Variant 01",
                "trafficSplit": 50,
                "uniqueVisitors": 1,
              },
            ],
            "experimentId": undefined,
          },
        },
        "title": "Review & Run",
      },
    ],
    "title": "Setup",
  },
  "status": "draft",
  "summary": Object {
    "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit.",
    "subtitle": "Description",
    "title": "Summary",
  },
}
`;

exports[`Summary Mapper for status in DRAFT should render step 1 description 1`] = `
<span>
  <React.Fragment>
    <div>
      <span
        className="text-secondary mr-1"
      >
        Experience:
      </span>
      Experience Name
    </div>
    <div>
      <span
        className="text-secondary mr-1"
      >
        Segment:
      </span>
      Segment Name
    </div>
  </React.Fragment>
</span>
`;

exports[`Summary Mapper for status in DRAFT should render step 2 description 1`] = `
<span>
  <strong>
    Click-Through Rate
  </strong>
</span>
`;

exports[`Summary Mapper for status in DRAFT should render step 3 description 1`] = `
<span>
  1 variant
</span>
`;

exports[`Summary Mapper for status in DRAFT should render step 4 description 1`] = `
<span>
  Review traffic split and run your test.
</span>
`;

exports[`Summary Mapper for status in DRAFT should return formatted data 1`] = `
Object {
  "header": Object {
    "Description": [Function],
    "title": "Test Is in Draft Mode",
  },
  "setup": Object {
    "current": 3,
    "steps": Array [
      Object {
        "Description": [Function],
        "buttonProps": Object {
          "symbol": "dxp-logo",
        },
        "title": "Test Target",
      },
      Object {
        "Description": [Function],
        "buttonProps": Object {
          "symbol": "dxp-logo",
        },
        "title": "Test Metric",
      },
      Object {
        "Description": [Function],
        "buttonProps": Object {
          "symbol": "dxp-logo",
        },
        "title": "Variants",
      },
      Object {
        "Description": [Function],
        "buttonProps": Object {
          "data-tooltip": true,
          "disabled": true,
          "title": "Select the target element on Liferay DXP to run the test.",
        },
        "modal": Object {
          "Component": [Function],
          "props": Object {
            "dxpVariants": Array [
              Object {
                "changes": 0,
                "control": true,
                "dxpVariantId": "DEFAULT",
                "dxpVariantName": "Control",
                "trafficSplit": 50,
                "uniqueVisitors": 1,
              },
              Object {
                "changes": 0,
                "control": false,
                "dxpVariantId": "4203992243",
                "dxpVariantName": "Variant 01",
                "trafficSplit": 50,
                "uniqueVisitors": 1,
              },
            ],
            "experimentId": undefined,
          },
        },
        "title": "Review & Run",
      },
    ],
    "title": "Setup",
  },
  "status": "draft",
  "summary": Object {
    "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit.",
    "subtitle": "Description",
    "title": "Summary",
  },
}
`;

exports[`Summary Mapper for status in FINISHED_WINNER and winner no declared should return formatted data for status in FINISHED_NO_WINNER 1`] = `
Object {
  "alert": Object {
    "description": "We recommend that you use any of the test candidates, as they will perform similarly.",
    "symbol": "exclamation-circle",
    "title": "There is no clear winner.",
  },
  "header": Object {
    "Description": [Function],
    "title": "No Clear Winner",
  },
  "sections": Array [
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
  ],
  "status": "finished_no_winner",
  "summary": Object {
    "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit.",
    "subtitle": "Description",
    "title": "Summary",
  },
}
`;

exports[`Summary Mapper for status in RUNNING should return formatted data for status in RUNNING 1`] = `
Object {
  "header": Object {
    "Description": [Function],
    "title": "Test Is Running",
  },
  "sections": Array [
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
  ],
  "status": "running",
  "summary": Object {
    "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit.",
    "subtitle": "Description",
    "title": "Summary",
  },
}
`;

exports[`Summary Mapper for status in TERMINATED should return formatted data for status in TERMINATED 1`] = `
Object {
  "alert": Object {
    "description": "While some improvement was observed, the current test has not gathered sufficient data to confidently determine a winner.",
    "symbol": "exclamation-circle",
    "title": "Variant 01 has outperformed Control by at least 1.00%.",
  },
  "header": Object {
    "Description": [Function],
    "title": "Test Was Terminated",
  },
  "sections": Array [
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
    Object {
      "Body": [Function],
    },
  ],
  "status": "terminated",
  "summary": Object {
    "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit.",
    "subtitle": "Description",
    "title": "Summary",
  },
}
`;
